--- a/viewer/index.html
+++ b/viewer/index.html
@@ -11,36 +11,36 @@
 
     <!-- In production, only one script (pdf.js) is necessary -->
     <!-- In production, change the content of PDFJS.workerSrc below -->
-    <script type="text/javascript" src="../pdf.js/src/network.js"></script>            <!-- only when worker is disabled -->
-    <script type="text/javascript" src="../pdf.js/src/core.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/util.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/api.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/canvas.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/obj.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/function.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/charsets.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/cidmaps.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/colorspace.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/crypto.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/evaluator.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/fonts.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/glyphlist.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/image.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/metrics.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/parser.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/pattern.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/stream.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/chunked_stream.js"></script>     <!-- only when worker is disabled -->
-    <script type="text/javascript" src="../pdf.js/src/pdf_manager.js"></script>        <!-- only when worker is disabled -->
-    <script type="text/javascript" src="../pdf.js/src/worker.js"></script>
-    <script type="text/javascript" src="../pdf.js/external/jpgjs/jpg.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/jpx.js"></script>
-    <script type="text/javascript" src="../pdf.js/src/jbig2.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/network.js"></script>            <!-- only when worker is disabled -->
+    <script type="text/javascript" src="../node_modules/pdf.js/src/core.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/util.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/api.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/canvas.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/obj.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/function.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/charsets.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/cidmaps.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/colorspace.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/crypto.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/evaluator.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/fonts.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/glyphlist.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/image.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/metrics.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/parser.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/pattern.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/stream.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/chunked_stream.js"></script>     <!-- only when worker is disabled -->
+    <script type="text/javascript" src="../node_modules/pdf.js/src/pdf_manager.js"></script>        <!-- only when worker is disabled -->
+    <script type="text/javascript" src="../node_modules/pdf.js/src/worker.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/external/jpgjs/jpg.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/jpx.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/jbig2.js"></script>
 
     <script type="text/javascript">
       // Specify the main script used to create a new PDF.JS web worker.
       // In production, change this to point to the combined `pdf.js` file.
-      PDFJS.workerSrc = '../pdf.js/src/worker_loader.js';
+      PDFJS.workerSrc = '../node_modules/pdf.js/src/worker_loader.js';
 //      PDFJS.disableWorker = true;
 //      globalScope.verbosity = INFOS;
 
