--- a/pdf-converter/index.html
+++ b/pdf-converter/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="../node_modules/pdf.js/src/crypto.js"></script>
     <script type="text/javascript" src="../node_modules/pdf.js/src/evaluator.js"></script>
     <script type="text/javascript" src="../node_modules/pdf.js/src/fonts.js"></script>
+    <script type="text/javascript" src="../node_modules/pdf.js/src/font_renderer.js"></script>
     <script type="text/javascript" src="../node_modules/pdf.js/src/glyphlist.js"></script>
     <script type="text/javascript" src="../node_modules/pdf.js/src/image.js"></script>
     <script type="text/javascript" src="../node_modules/pdf.js/src/metrics.js"></script>
