Turn off the PDF cache for the viewer

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -47,7 +47,7 @@
 
       PDFJS.disableAutoFetch = true;
       PDFJS.disableImagePrescale = true;
-      PDFJS.useExternalDiskCache = true;     // Needed in order to e able to cache/save to disk all images
+      PDFJS.useExternalDiskCache = false;     // Needed in order to be able to cache/save to disk all images
 
     </script>
 
