Change color and icon of the import button

--- a/welcome/ui/main.reel/main.html
+++ b/welcome/ui/main.reel/main.html
@@ -82,7 +82,7 @@
             
             <section class="Launcher-section Action">
                 <!--button data-montage-id="newAppButton" class="Action-button Action-button--new"></button-->
-                <button data-montage-id="importButton" class="Action-button Action-button--open"></button>
+                <button data-montage-id="importButton" class="Action-button Action-button--import"></button>
             </section>
 
             <!--section class="Launcher-section History">
