various improvement and architecture changes

--- a/import-activity/ui/activity-list-item.reel/activity-list-item.html
+++ b/import-activity/ui/activity-list-item.reel/activity-list-item.html
@@ -18,6 +18,7 @@
         },
         "bindings": {
             "status": {"<-": "@owner.item.status"},
+            "error": {"<-": "@owner.item.error"},
             "currentPage": {"<-": "@owner.item.currentPage"},
             "nbrPages": {"<-": "@owner.item.nbrPages"}
         }
