Display Book coverImage as icon once the book is ready

--- a/import-activity/ui/activity-list-item.reel/activity-list-item.html
+++ b/import-activity/ui/activity-list-item.reel/activity-list-item.html
@@ -20,7 +20,8 @@
             "status": {"<-": "@owner.item.status"},
             "error": {"<-": "@owner.item.error"},
             "currentPage": {"<-": "@owner.item.currentPage"},
-            "nbrPages": {"<-": "@owner.item.nbrPages"}
+            "nbrPages": {"<-": "@owner.item.nbrPages"},
+            "coverImage": {"<-": "@owner.item.coverImage"}
         }
     },
     "openButton": {
