Fixed viewer to allow SVG related resources to work properly (mask, clip) with the iFrame

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -42,7 +42,7 @@
                 "prototype": "ui/page-view.reel",
                 "properties": {
                     "element": {"#": "pageView"},
-                    "viewMode": "dual-right"
+                    "viewMode": "default"
                 },
                 "bindings": {
                     "pages": {"<-": "@owner.pages"},
