--- a/ui/page-view.reel/page-view.html
+++ b/ui/page-view.reel/page-view.html
@@ -26,10 +26,10 @@
 
     <section data-montage-id="pageView" class="pages">
         <!--<section class="page-left">-->
-            <iframe scrolling="no"></iframe>
+            <iframe src="about:blank" seamless scrolling="no"></iframe>
         <!--</section>-->
         <!--<section class="page-right">-->
-            <iframe scrolling="no"></iframe>
+            <iframe src="about:blank" seamless scrolling="no"></iframe>
         <!--</section>-->
     </section>
 
