--- a/welcome/ui/main.reel/main.html
+++ b/welcome/ui/main.reel/main.html
@@ -63,7 +63,28 @@
                 "localizations": {
                     "value": {"key": "copyright"}
                 }
+            },
+
+            "introWarning1": {
+                "prototype": "montage/ui/text.reel",
+                "properties": {
+                    "element": {"#": "introWarning1"}
+                },
+                "localizations": {
+                    "value": {"key": "welcome_warning1"}
+                }
+            },
+
+            "introWarning2": {
+                "prototype": "montage/ui/text.reel",
+                "properties": {
+                    "element": {"#": "introWarning2"}
+                },
+                "localizations": {
+                    "value": {"key": "welcome_warning2"}
+                }
             }
+
         }
     </script>
 
@@ -76,6 +97,10 @@
             <div class="Intro-logo"></div>
             <p class="Intro-version" data-montage-id="versionText"></p>
             <p class="Intro-meta" data-montage-id="introMeta">&copy; 2012–2013 Declarativ Inc.</p>
+            <p>
+                <div class="Intro-warning" data-montage-id="introWarning1">Proprietary and Confidential.</div>
+                <div class="Intro-warning" data-montage-id="introWarning2">Please do not distribute.</div>
+            </p>
         </section>
 
         <section class="Launcher">
