Intro-warning styling

--- a/welcome/ui/main.reel/main.html
+++ b/welcome/ui/main.reel/main.html
@@ -96,11 +96,11 @@
         <section class="Intro">
             <div class="Intro-logo"></div>
             <p class="Intro-version" data-montage-id="versionText"></p>
+            <div class="Intro-warning">
+                <p data-montage-id="introWarning1" class="Intro-warning-line">Proprietary and Confidential.</p>
+                <p data-montage-id="introWarning2" class="Intro-warning-line">Please do not distribute.</p>
+            </div>
             <p class="Intro-meta" data-montage-id="introMeta">&copy; 2012–2013 Declarativ Inc.</p>
-            <p>
-                <div class="Intro-warning" data-montage-id="introWarning1">Proprietary and Confidential.</div>
-                <div class="Intro-warning" data-montage-id="introWarning2">Please do not distribute.</div>
-            </p>
         </section>
 
         <section class="Launcher">
