Importer footer styling
fixes overflow when resizing

--- a/import-activity/ui/main.reel/main.html
+++ b/import-activity/ui/main.reel/main.html
@@ -98,10 +98,10 @@
                 </li>
             </ul>
         </section>
-        <section class="footer">
-            <span>Importing documents into&nbsp;</span>
-            <span data-montage-id="destination"></span>
-            <button data-montage-id="clear-button" class="Activity-list--clear"></button>
+        <section class="Importer-footer">
+            <span class="Importer-destinationLabel">Importing documents into</span>
+            <span data-montage-id="destination" class="Importer-destination"></span>
+            <button data-montage-id="clear-button" class="Importer-clearButton"></button>
         </section>
     </div>
 
