--- a/welcome/index.html
+++ b/welcome/index.html
@@ -3,11 +3,11 @@
 <head>
     <title>Welcome</title>
     <meta charset="utf-8">
-    
+
     <link href="../assets/fonts/fonts.css" rel="stylesheet" />
     <link href="../assets/styles/bootstrapping.css" rel="stylesheet" />
-    <link href="../assets/styles/plume.css" rel="stylesheet" />
-    
+    <link href="../assets/styles/quill.css" rel="stylesheet" />
+
     <script src="../node_modules/montage/montage.js" data-package=".."></script>
     <script type="text/montage-serialization">
         {
