--- a/ui/page-view.reel/page-view.html
+++ b/ui/page-view.reel/page-view.html
@@ -23,15 +23,8 @@
 
 </head>
 <body>
-
     <section data-montage-id="pageView" class="pages">
-        <!--<section class="page-left">-->
-            <iframe src="about:blank" seamless scrolling="no"></iframe>
-        <!--</section>-->
-        <!--<section class="page-right">-->
-            <iframe src="about:blank" seamless scrolling="no"></iframe>
-        <!--</section>-->
+        <iframe seamless scrolling="no"></iframe>
     </section>
-
 </body>
 </html>
