--- a/ui/page-thumbnail.reel/page-thumbnail.html
+++ b/ui/page-thumbnail.reel/page-thumbnail.html
@@ -15,13 +15,10 @@
             "pageView": {
                 "prototype": "ui/page-view.reel",
                 "properties": {
-                    "element": {"#": "pageView"},
-                    "viewMode": "single",
-                    "resizeWrapper": true
+                    "element": {"#": "pageView"}
                 },
                 "bindings": {
-                    "pages": {"<-": "@owner.pages"},
-                    "index": {"<-": "@owner.index"}
+                    "item": {"<-": "@owner.item"}
                 }
             },
             "name": {
@@ -40,7 +37,8 @@
 
             "owner": {
                 "properties": {
-                    "element": {"#": "pageThumbnail"}
+                    "element": {"#": "pageThumbnail"},
+                    "pageView": {"@": "pageView"}
                 }
             }
 
