Allow positioning the copyright using classNames
Far from being a final RPC/IPC/API, this is enough prove that we can
read and write through cross-domain iframes.

This does implement enough (in a very hardcoded manner) to change
the className of a detected element in a document as expected via a
very rudimentary UI.

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -72,10 +72,21 @@
             "copyrightCondition": {
                 "prototype": "montage/ui/condition.reel",
                 "properties": {
-                    "element": {"#": "foo"}
+                    "element": {"#": "copyrightCondition"},
+                    "removalStrategy": "hide"
                 },
                 "bindings": {
                     "condition": {"<-": "!!@owner.currentPage.pageWindow && @owner.currentPage.hasCopyright"}
+                }
+            },
+
+            "copyrightPosition": {
+                "prototype": "ui/tools/position-inspector.reel",
+                "properties": {
+                    "element": {"#": "copyrightPosition"}
+                },
+                "bindings": {
+                    "object": {"<-": "@owner.currentPage"}
                 }
             }
 
@@ -87,11 +98,9 @@
 
     <div data-montage-id="main" class="main">
         <header>
-
-            <div data-montage-id="foo">
-                COPYRIGHT!
+            <div data-montage-id="copyrightCondition">
+                <div data-montage-id="copyrightPosition"></div>
             </div>
-
         </header>
         <div class="content">
             <nav class="navigation">
