Wire up something to get the "save" pathway started
Right now it just logs out the content of the document in anticipation
of us being able to actually save this somewhere.

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -88,6 +88,19 @@
                 "bindings": {
                     "object": {"<-": "@owner.currentPage"}
                 }
+            },
+
+            "saveButton": {
+                "prototype": "matte/ui/button.reel",
+                "properties": {
+                    "element": {"#": "saveButton"}
+                },
+                "listeners": [
+                    {
+                        "type": "action",
+                        "listener": {"@": "owner"}
+                    }
+                ]
             }
 
         }
@@ -100,6 +113,7 @@
         <header>
             <div data-montage-id="copyrightCondition">
                 <div data-montage-id="copyrightPosition"></div>
+                <button data-montage-id="saveButton">Save</button>
             </div>
         </header>
         <div class="content">
