Improve layout of copyright inspector a bit
Just enough to get this all fitting on one line for now.

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -111,10 +111,11 @@
 
     <div data-montage-id="main" class="main">
         <header>
-            <div data-montage-id="copyrightCondition">
+            <section data-montage-id="copyrightCondition" class="main-inspector">
+                <h1 class="main-inspector-title">Copyright</h1>
                 <div data-montage-id="copyrightPosition"></div>
                 <button data-montage-id="saveButton">Save</button>
-            </div>
+            </section>
         </header>
         <div class="content">
             <nav class="navigation">
