--- a/ui/spread-view.reel/spread-view.html
+++ b/ui/spread-view.reel/spread-view.html
@@ -13,7 +13,7 @@
             },
 
             "leftPage": {
-                "prototype": "ui/page-view.reel",
+                "prototype": "ui/read-along-debug-view.reel",
                 "properties": {
                     "element": {"#": "leftPage"}
                 }
