Plume new logo (PLU-102)

--- a/welcome/ui/main.reel/main.html
+++ b/welcome/ui/main.reel/main.html
@@ -101,6 +101,7 @@
                 <p data-montage-id="introWarning2" class="Intro-warning-line">Please do not distribute.</p>
             </div>
             <p class="Intro-meta" data-montage-id="introMeta">&copy; 2012–2013 Declarativ Inc.</p>
+            <p class="Intro-attribution"><span>HTML5 Logo by <a href="http://www.w3.org/" target="_blank"><abbr title="World Wide Web Consortium">W3C</abbr></a></span></p>
         </section>
 
         <section class="Launcher">
